mini fixy, translacji, plyty layout i email poprawny

--- a/src/components/Plyty_cmpnt.astro
+++ b/src/components/Plyty_cmpnt.astro
@@ -70,7 +70,7 @@ import plytyBiberDots from '../assets/plyty-biber-dots.png'
     .albumy-container {
         display: grid;
         grid-template-columns: 99vw;
-        grid-template-rows: 93vh 78vw 60vw 78vw;
+        grid-template-rows: 43vw 78vw 60vw 78vw;
         font-weight: 400;
         font-family: "Gilda Display";
         
@@ -81,7 +81,7 @@ import plytyBiberDots from '../assets/plyty-biber-dots.png'
         grid-row: 1/2;
         display: grid;
         grid-template-columns: 50vw 50vw;
-        grid-template-rows: 14vh 1fr;
+        grid-template-rows: 1fr;
         background: linear-gradient(180deg, #FFF 0%, #ECE4F0 100%);
         overflow: hidden;
     }
