--- a/src/components/en_components/Glowna_cmpnt.astro
+++ b/src/components/en_components/Glowna_cmpnt.astro
@@ -55,7 +55,7 @@ import Footer from '../../components/en_components/Footer.astro'
 			<div>
 				<!-- TODO - make gradient move i linki i na szerokosc zrobic max bo wyglada goofy w safari-->
 				<h2>
-					KALENDARZ
+					CALENDAR
 				</h2>
 				<div class="wydarzenia">
 					<Wydarzenia title="Wydarzenia" />
