--- a/src/components/en_components/Kontakt_cmpnt.astro
+++ b/src/components/en_components/Kontakt_cmpnt.astro
@@ -16,7 +16,7 @@ import igIcon from '../../assets/ig-kontakt.svg';
             </form>
         </div>
         <h3>Contact</h3>
-        <a id="emailson" href="mailto:owczareklobodaduo@gmail.com">owczareklobodaduo@gmail.com</a>
+        <a id="emailson" href="mailto:fantastica.ensemble@gmail.com">fantastica.ensemble@gmail.com</a>
         <div class="footer-social-icons-kontakt">
             <a href="https://www.instagram.com/fantastica.ensemble/" class="footer-right-icon-container"><img class="footer-right-icon" src={igIcon.src} alt="instagram" /> <span>instagram</span></a>
             <a href="https://www.facebook.com/fantastica.ensemble" class="footer-right-icon-container"><img class="footer-right-icon" src={fbIcon.src} alt="facebook" /> <span id="footer-right-text-fb">facebook</span></a>
