--- a/src/components/en_components/Plyty_cmpnt.astro
+++ b/src/components/en_components/Plyty_cmpnt.astro
@@ -66,10 +66,10 @@ import plytyBiberDots from '../../assets/plyty-biber-dots.png'
 
 <style>
 
-    .albumy-container {
+.albumy-container {
         display: grid;
         grid-template-columns: 99vw;
-        grid-template-rows: 93vh 78vw 60vw 78vw;
+        grid-template-rows: 43vw 78vw 60vw 78vw;
         font-weight: 400;
         font-family: "Gilda Display";
         
