--- a/src/components/en_components/Projekty_cmpnt.astro
+++ b/src/components/en_components/Projekty_cmpnt.astro
@@ -17,7 +17,7 @@ import projekt4img from '../../assets/projekt4img.png';
         <div class="projekty-headline-text">
             <h1>Projects</h1>
             <p>
-                Fantastica Ensemble to muzyka, która przekracza granice – nie tylko czasowe, ale i estetyczne. Każdy nasz projekt to podróż, w której barok łączy się z gestem, improwizacją i nowoczesnym spojrzeniem na sztukę
+                Fantastica Ensemble is music that transcends boundaries—not only temporal but also aesthetic. Each of our projects is a journey where Baroque meets gesture, improvisation, and a modern perspective on art.
             </p>
         </div>
     </div>
