--- a/src/components/en_components/Glowna_cmpnt.astro
+++ b/src/components/en_components/Glowna_cmpnt.astro
@@ -55,7 +55,7 @@ import Footer from '../../components/en_components/Footer.astro'
 			<div>
 				<!-- TODO - make gradient move i linki i na szerokosc zrobic max bo wyglada goofy w safari-->
 				<h2>
-					CALENDAR
+					KALENDARZ
 				</h2>
 				<div class="wydarzenia">
 					<Wydarzenia title="Wydarzenia" />
@@ -97,7 +97,7 @@ header {
 			display: grid;
 			width: -webkit-fill-available;
 			place-items: center;
-			grid-template-rows: 122vh 52% 100vh 1fr;
+			grid-template-rows: 122vh 56.3% 100vh 1fr;
 
 		}
 
@@ -437,7 +437,7 @@ header {
 	/* Iphone */
 		@media screen and (max-width: 600px) {
 			#fantastica-glowna {
-				grid-template-rows: 114vh 65% 100vh 1fr 1fr;
+				grid-template-rows: 114vh 70.1% 100vh 1fr 1fr;
 			}
 			.fantastica-big-letters {
 				align-self: start;
@@ -460,21 +460,21 @@ header {
 
 		}
 
-			@media screen and (max-width: 420px) {
+			@@media screen and (max-width: 420px) {
 				#fantastica-glowna {
-					grid-template-rows: 114vh 66.7% 100vh 1fr;
+					grid-template-rows: 114vh 68.2% 100vh 1fr;
 
 				}
 			}
 			@media screen and (max-width: 400px) {
 				#fantastica-glowna {
-					grid-template-rows: 114vh 68.4% 100vh 1fr;
+					grid-template-rows: 114vh 70.2% 100vh 1fr;
 
 				}
 			}
 			@media screen and (max-width: 385px) {
 				#fantastica-glowna {
-					grid-template-rows: 114vh 75.1% 100vh 1fr;
+					grid-template-rows: 114vh 76.7% 100vh 1fr;
 
 				}
 			}
@@ -487,42 +487,42 @@ header {
 		@media screen and (min-width: 1000px) {
 			@media screen and (max-height: 950px) {
 				#fantastica-glowna {
-					grid-template-rows: 122vh 53% 100vh 1fr;
+					grid-template-rows: 122vh 58% 100vh 1fr;
 				}
 			}
 			@media screen and (max-height: 920px) {
 				#fantastica-glowna {
-					grid-template-rows: 122vh 54.4% 100vh 1fr;
+					grid-template-rows: 122vh 58.8% 100vh 1fr;
 				}
 			}
 			@media screen and (max-height: 890px) {
 				#fantastica-glowna {
-					grid-template-rows: 122vh 55% 100vh 1fr;
+					grid-template-rows: 122vh 60% 100vh 1fr;
 				}
 			}
 			@media screen and (max-height: 860px) {
 				#fantastica-glowna {
-					grid-template-rows: 122vh 56% 100vh 1fr;
+					grid-template-rows: 122vh 61% 100vh 1fr;
 				}
 			}
 			@media screen and (max-height: 830px) {
 				#fantastica-glowna {
-					grid-template-rows: 122vh 57.7% 100vh 1fr;
+					grid-template-rows: 122vh 62.4% 100vh 1fr;
 				}
 			}
 			@media screen and (max-height: 780px) {
 				#fantastica-glowna {
-					grid-template-rows: 122vh 59.3% 100vh 1fr;
+					grid-template-rows: 122vh 64.3% 100vh 1fr;
 				}
 			}
 			@media screen and (max-height: 750px) {
 				#fantastica-glowna {
-					grid-template-rows: 132vh 59.3% 100vh 1fr;
+					grid-template-rows: 132vh 64.3% 100vh 1fr;
 				}
 			}
 			@media screen and (max-height: 710px) {
 				#fantastica-glowna {
-					grid-template-rows: 132vh 61.1% 100vh 1fr;
+					grid-template-rows: 132vh 66.1% 100vh 1fr;
 				}
 			}
 		}
