--- a/src/components/en_components/Header.astro
+++ b/src/components/en_components/Header.astro
@@ -64,11 +64,12 @@ const links = [
     header {
       mix-blend-mode: difference;
       display: flex;
-      justify-content: space-around;
+      justify-content: space-between;
       background: #ffffff00;
       padding: 10px;
       width: 100%;
       z-index: 3;
+      padding-top: 15px;
     }
     
 
@@ -88,6 +89,14 @@ const links = [
     }
     a:hover {
       color: yellow;
+    }
+    .logo-container {
+        padding-left: 7vw;
+    }
+
+    .desktop-nav {
+      padding-right: 8vw;
+      
     }
   }
   /* navigation - mobile STYLES */
