Glowna: 1st photo: Naprawa zdj na wyzszej jakosci

--- a/src/components/en_components/Glowna_cmpnt.astro
+++ b/src/components/en_components/Glowna_cmpnt.astro
@@ -237,6 +237,7 @@ header {
 			grid-row-start: 3;
 			background-image: url('../../assets/first_photo_main.png'); /* Set the background image */
 			background-size: cover; /* Cover the whole div */
+			background-position: center;
 		}
 			#first-photo-text-container {
 				width: 94vw;
