--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -14,7 +14,7 @@ const links = {
     { name: "About", href: "/en/about" },
     { name: "Listen", href: "/en/listen" },
     { name: "Projects", href: "/en/projects" },
-    { name: "Albums", href: "/en/albums" },
+    { name: "CD", href: "/en/CD" },
     { name: "Contact", href: "/en/contact" }
   ]
 };
