--- a/src/components/Plyty_cmpnt.astro
+++ b/src/components/Plyty_cmpnt.astro
@@ -47,10 +47,10 @@ import plytyBiberDots from '../assets/plyty-biber-dots.png'
     </div>
     <div class="albumy-fantastica-container">
         <div class="albumy-fanstastica">
-            <h2>FANTASTICA</h2>
+            <h2>fantasticus</h2>
             <h4>zmysłowa gra kontrastów</h4>
             <p>
-                Od mistyki po uliczny puls – muzyka, która kusi i zaskakuje. „Biber. Trochę sacrum. Trochę profanum.” to program, który śmiało bawi się granicą między sacrum a profanum. Zanurzone w ludowych rytmach sonaty Bibera sprawiają, że duchowość i erotyzm w muzyce splatają się w nieoczekiwanych miejscach. To opowieść pełna intensywności – zmysłowa, niepokorna, a momentami mistyczna. To czas energetycznej podróży, gdzie każdy dźwięk może stać się impulsem do kreacji na scenie – od żywiołowych, karczemnych klimatów po najgłębsze momenty sacrum. W programie celebrujemy piękno i nieprzewidywalność barokowych kontrastów, tworząc możliwość refleksji, ale też doświadczania czystej radości muzyki, która przekracza granice czasu i wyobraźni.
+                Wirtuozeria, szaleństwo i dźwiękowa podróż przez Habsburskie Imperium XVII wieku. "Fantasticus" to program pełen intensywnych, wirtuozowskich wyzwań w stylus fantasticus – stylu pełnym muzycznych uniesień, nieskrępowanej improwizacji i zaskakujących zwrotów. To zderzenie dobrze znanych sonat H.I.F. Bibera z niemal zapomnianymi kompozycjami, jak na przykład odkryta niedawno Sonata d-moll Heinricusa Litzkaua, która jest prawdziwą dźwiękową perłą. Zarejestrowany przez Da Vinci Publishing projekt to podróż w świat barokowej fantazji, gdzie wszystko jest możliwe, a granice między utworami, emocjami a wyobraźnią zacierają się, tworząc jedno spójne, pulsujące dzieło.
             </p>
             <h3>PREMIERA WKRÓTCE</h3>
             <div class="albumy-fantastica-backgroundEclipses"> 
