--- a/src/components/en_components/Plyty_cmpnt.astro
+++ b/src/components/en_components/Plyty_cmpnt.astro
@@ -46,10 +46,10 @@ import plytyBiberDots from '../../assets/plyty-biber-dots.png'
     </div>
     <div class="albumy-fantastica-container">
         <div class="albumy-fanstastica">
-            <h2>FANTASTICA</h2>
+            <h2>FANTASTICUS</h2>
             <h4>A Sensual Play of Contrasts</h4>
             <p>
-                From mysticism to the pulse of the streets—music that seduces and surprises. Biber. Sacrum. Profanum. is a program that boldly plays with the boundary between the sacred and the profane. Immersed in folk rhythms, Biber’s sonatas intertwine spirituality and sensuality in unexpected places. This is a story full of intensity—sensual, rebellious, and at times mystical. It is a journey of raw energy, where every sound becomes an impulse for creation on stage—from lively, tavern-like atmospheres to the deepest moments of the sacred. In this program, we celebrate the beauty and unpredictability of Baroque contrasts, creating a space for both reflection and the sheer joy of music that transcends time and imagination.
+                Virtuosity, madness, and a sonic journey through the 17th-century Habsburg Empire. Fantasticus is a program brimming with intense, virtuosic challenges in stylus fantasticus—a style full of musical ecstasy, unfettered improvisation, and unexpected twists. It is a collision of well-known sonatas by H.I.F. Biber with nearly forgotten compositions, such as the recently rediscovered Sonata in D minor by Heinricus Litzkau, a true musical gem.
             </p>
             <h3>RELEASE SOON</h3>
             <div class="albumy-fantastica-backgroundEclipses"> 
