O-nas: Lepsze zdjecia

--- a/src/components/About_cmpnt.astro
+++ b/src/components/About_cmpnt.astro
@@ -486,6 +486,9 @@ import Footer from '../components/Footer.astro'
         grid-row: 8/9;
         height: 100%;
     }
+    #about-7 {
+        align-self: end;
+    }
 
 
 
