O-nas: 8. layout fix

--- a/src/components/en_components/About_cmpnt.astro
+++ b/src/components/en_components/About_cmpnt.astro
@@ -140,8 +140,8 @@ We perform on both national and European stages, appearing in Poland, Austria, F
     .about-container {
         display: grid;
         grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 0.5fr;
-        grid-template-rows: 100vh 100vh 100vh 100vh 100vh 100vh 100vh calc(20px + 42vh);
-        height: 700vh;
+        grid-template-rows: 1080px 1080px 832px 960px 532px 680px 940px calc(20px + 42vh);
+        height: 6600px;
         font-family: "Gilda Display";
         z-index: -2;
     }
@@ -255,7 +255,7 @@ We perform on both national and European stages, appearing in Poland, Austria, F
         grid-row: 3 / 4;
         align-content: center;
         background: linear-gradient(180deg, #C3D4FF 0.64%, #9DD0EA 78.65%);
-
+        padding-top: 13vh;
     }
 
     .about-content-3-aleksandra-inside {
@@ -434,6 +434,7 @@ We perform on both national and European stages, appearing in Poland, Austria, F
         text-align: justify;
         font-family: "Gilda Display";
         font-weight: 300;
+        width: 530px;
     }
 
     .quote-with-gradient {
@@ -498,7 +499,9 @@ We perform on both national and European stages, appearing in Poland, Austria, F
         grid-row: 8/9;
         height: 100%;
     }
-
+    #about-7 {
+        align-self: end;
+    }
 
 
 
