--- a/src/components/About_cmpnt.astro
+++ b/src/components/About_cmpnt.astro
@@ -131,8 +131,8 @@ import Footer from '../components/Footer.astro'
     .about-container {
         display: grid;
         grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 0.5fr;
-        grid-template-rows: 100vh 100vh 100vh 100vh 100vh 100vh 100vh calc(20px + 42vh);
-        height: 700vh;
+        grid-template-rows: 1080px 1080px 832px 960px 532px 680px 940px calc(20px + 42vh);
+        height: 6600px;
         font-family: "Gilda Display";
         z-index: -2;
     }
@@ -246,6 +246,7 @@ import Footer from '../components/Footer.astro'
         grid-row: 3 / 4;
         align-content: center;
         background: linear-gradient(180deg, #C3D4FF 0.64%, #9DD0EA 78.65%);
+        padding-top: 13vh;
 
     }
 
@@ -422,6 +423,7 @@ import Footer from '../components/Footer.astro'
         text-align: justify;
         font-family: "Gilda Display";
         font-weight: 300;
+        width: 530px;
     }
 
     .quote-with-gradient {
