Naprawa reszty oprocz pkt 9 i 4

--- a/src/components/Glowna_cmpnt.astro
+++ b/src/components/Glowna_cmpnt.astro
@@ -73,8 +73,15 @@ import Footer from '../components/Footer.astro'
 			<img src={secondPhotoMain.src} alt="" />
 			<div>
 				<h2>“Rewolucjonizują świat muzyki barokowej swoim nowatorskim podejściem”</h2>
-				<h4>Autorzy<br>Karolina Sajniak-Drzyzga, Julian Cochran Foundation</h4>
-				<a>“Ich autorskie projekty to prawdziwe perełki, które z wirtuozerią łączą świeżość i innowacyjność, przybliżając piękno baroku w sposób zaskakujący i pełen młodzieńczej energii. Każdy ich koncert to nie tylko występ muzyczny, ale przemyślana, teatralna opowieść w której tradycja spotyka się z nowoczesności.”</a>
+				<h4>Katarzyna Czubek,<br>Akademia Muzyczna im. Krzysztofa Pendereckiego, Capella
+					Cracoviensis, festiwal Młoda Muzyka Dawna</h4>
+				<a>“Porywające,
+					ekspresyjne wykonania ukazują głęboką pasję muzyków do repertuaru
+					barokowego. Wielkie kontrasty, liryzm i taneczność stanowią integralną
+					część ich interpretacji. Zespół nie boi się poszukiwać nowych rozwiązań,
+					odważnie eksplorując alternatywne miejsca koncertowe i pokazując
+					muzykę baroku szerszemu gronu odbiorców. To zespół, którego
+					poczynania warto śledzić!”</a>
 			</div>
 		</div>
 		<!-- TODO - footer -->
