--- a/src/components/Kontant_cmpnt.astro
+++ b/src/components/Kontant_cmpnt.astro
@@ -136,6 +136,7 @@ import igIcon from '../assets/ig-kontakt.svg';
         justify-content: space-between;
         padding-top: 3.8vh;
         width: 370px;
+        
     }
     .footer-right-icon-container {
         font-family: "Gilda Display";
@@ -215,6 +216,7 @@ import igIcon from '../assets/ig-kontakt.svg';
         .footer-social-icons-kontakt {
             justify-self: center;
             width: 92vw;
+            margin-bottom: 3vh;
         }
     }
 
