--- a/src/components/Plyty_cmpnt.astro
+++ b/src/components/Plyty_cmpnt.astro
@@ -47,7 +47,7 @@ import plytyBiberDots from '../assets/plyty-biber-dots.png'
     </div>
     <div class="albumy-fantastica-container">
         <div class="albumy-fanstastica">
-            <h2>fantasticus</h2>
+            <h2>FANTASTICUS</h2>
             <h4>zmysłowa gra kontrastów</h4>
             <p>
                 Wirtuozeria, szaleństwo i dźwiękowa podróż przez Habsburskie Imperium XVII wieku. "Fantasticus" to program pełen intensywnych, wirtuozowskich wyzwań w stylus fantasticus – stylu pełnym muzycznych uniesień, nieskrępowanej improwizacji i zaskakujących zwrotów. To zderzenie dobrze znanych sonat H.I.F. Bibera z niemal zapomnianymi kompozycjami, jak na przykład odkryta niedawno Sonata d-moll Heinricusa Litzkaua, która jest prawdziwą dźwiękową perłą. Zarejestrowany przez Da Vinci Publishing projekt to podróż w świat barokowej fantazji, gdzie wszystko jest możliwe, a granice między utworami, emocjami a wyobraźnią zacierają się, tworząc jedno spójne, pulsujące dzieło.
