--- a/src/components/en_components/Glowna_cmpnt.astro
+++ b/src/components/en_components/Glowna_cmpnt.astro
@@ -67,8 +67,17 @@ import Footer from '../../components/en_components/Footer.astro'
 			<img src={secondPhotoMain.src} alt="" />
 			<div>
 				<h2>“Revolutionizing the world of Baroque music with their innovative approach.”</h2>
-				<h4>Authors<br>Karolina Sajniak-Drzyzga, Julian Cochran Foundation</h4>
-				<a>“Their unique projects are true pearls, which with virtuosity combine freshness and innovation, bringing the beauty of Baroque in a surprising and youthful way. Each of their concerts is not only a musical performance, but a thoughtful, theatrical story where tradition meets modernity.”</a>
+				<h4>Katarzyna Czubek,<br>Krzysztof Penderecki Academy of Music, Capella
+					Cracoviensis, Młoda Muzyka Dawna festival</h4>
+				<a>“Captivating,
+expressive performances demonstrate the musicians' deep passion for the repertoire of the
+Baroque repertoire. Great contrasts, lyricism and danceability are an integral
+part of their interpretations. The ensemble is not afraid to seek new solutions,
+boldly exploring alternative concert venues and showing
+Baroque music to a wider audience. This is a band whose doings
+actions are worth following!
+
+Translated with DeepL.com (free version).”</a>
 			</div>
 		</div>
 		<!-- TODO - footer -->
@@ -232,7 +241,7 @@ header {
 
 		#first-photo-containter {
 			display: flex;
-			justify-content: center;
+			justify-content: cxenter;
 			grid-column: 1/4;
 			grid-row-start: 3;
 			background-image: url('../../assets/first_photo_main.png'); /* Set the background image */
@@ -310,7 +319,7 @@ header {
 			flex-direction: column;
 			padding: 1vw 1vw 5vw 4vw;
 			background-color: #D9EDFF;
-			background-image: url('../assets/quote-second-gdnt.svg');
+			background-image: url('../../assets/quote-second-gdnt.svg');
 			background-size: cover;
 			background-position: center;
 			background-repeat: no-repeat;
