--- a/src/components/en_components/Kontakt_cmpnt.astro
+++ b/src/components/en_components/Kontakt_cmpnt.astro
@@ -215,6 +215,7 @@ import igIcon from '../../assets/ig-kontakt.svg';
         .footer-social-icons-kontakt {
             justify-self: center;
             width: 92vw;
+            margin-bottom: 3vh;
         }
     }
 
