--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -13,7 +13,7 @@ const pageTitles = {
   '/en/about': 'Fantastica | About',
   '/en/listen': 'Fantastica | Listen',
   '/en/projects': 'Fantastica | Projects',
-  '/en/albums': 'Fantastica | Albums',
+  '/en/CD': 'Fantastica | CD',
   '/en/contact': 'Fantastica | Contact'
 };
 
