--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -9,6 +9,7 @@ import ytIcon from '../assets/yt_icon.svg';
     <div class="footer">
         <div class="footer-left">
             <h2>DOŁĄCZ DO NAS</h2>
+            <p id="pod-dolacz">i wejdź z nami do świata muzyki</p>
             <form action="https://buttondown.email/api/emails/embed-subscribe/szymon" method="post">
                             <input type="email" name="email" placeholder="E-mail" required>
             <button type="submit" value="Subscribe">ZAPISZ SIĘ</button>
@@ -56,7 +57,7 @@ import ytIcon from '../assets/yt_icon.svg';
     }
 
     .footer-left h2 {
-        margin-bottom: 16vh;
+        margin-bottom: 3vh;
         font-size: 6vh;
         font-weight: normal;
     }
@@ -99,7 +100,7 @@ import ytIcon from '../assets/yt_icon.svg';
     }
     
     #emailson {
-        margin-bottom: 5vh;
+        margin-bottom: 7.2vh;
         text-decoration: underline;
     }
 
@@ -107,7 +108,6 @@ import ytIcon from '../assets/yt_icon.svg';
         color: #FFF;
         font-size: 24px;
         text-decoration: none;
-        display: block;
         margin-top: auto;
     }
 
@@ -124,10 +124,20 @@ import ytIcon from '../assets/yt_icon.svg';
         align-items: center;
         margin-bottom: 2.2vh;
     }
+
+    #pod-dolacz {
+        display: block;
+        font-size: 2.9vh;
+        margin-left: 1vw;
+        margin-top: 4.5vh;
+        margin-bottom: 8.9vh;
+    }
 /* Footer - mobile styles */
     @media screen and (max-width: 700px) { 
+        #pod-dolacz {
+            display: none;
+        }
         footer {
-            width: fit-content;
         }
         .footer {
             flex-direction: column;
