--- a/src/components/LangSwitchButton.astro
+++ b/src/components/LangSwitchButton.astro
@@ -8,7 +8,7 @@ const urlMappings = {
   '/o-nas': '/en/about',
   '/posluchaj': '/en/listen',
   '/projekty': '/en/projects',
-  '/plyty': '/en/albums',
+  '/plyty': '/en/CD',
   '/kontakt': '/en/contact'
 };
 
