O-nas: minifix klaudii

--- a/src/components/About_cmpnt.astro
+++ b/src/components/About_cmpnt.astro
@@ -131,7 +131,7 @@ import Footer from '../components/Footer.astro'
     .about-container {
         display: grid;
         grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 0.5fr;
-        grid-template-rows: 1080px 1080px 832px 960px 532px 680px 940px calc(20px + 42vh);
+        grid-template-rows: 1080px 1080px 832px 960px 40vw 680px 940px calc(20px + 42vh);
         height: 6600px;
         font-family: "Gilda Display";
         z-index: -2;
