--- a/src/components/en_components/About_cmpnt.astro
+++ b/src/components/en_components/About_cmpnt.astro
@@ -140,7 +140,7 @@ We perform on both national and European stages, appearing in Poland, Austria, F
     .about-container {
         display: grid;
         grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 0.5fr;
-        grid-template-rows: 1080px 1080px 832px 960px 532px 680px 940px calc(20px + 42vh);
+        grid-template-rows: 1080px 1080px 832px 960px 40vw 680px 940px calc(20px + 42vh);
         height: 6600px;
         font-family: "Gilda Display";
         z-index: -2;
