--- a/src/components/en_components/Posluchaj_cmpnt.astro
+++ b/src/components/en_components/Posluchaj_cmpnt.astro
@@ -81,7 +81,7 @@ import Footer from '../../components/en_components/Footer.astro';
         grid-column: 2/3;
         grid-row-start: 2;
         display: flex;
-        margin-top: 8vw;
+        margin-top: 10vh;
 
     }
     .posluchaj-socials-buttons {
