--- a/src/components/en_components/Footer.astro
+++ b/src/components/en_components/Footer.astro
@@ -125,6 +125,7 @@ import ytIcon from '../../assets/yt_icon.svg';
         margin-bottom: 2.2vh;
     }
     #pod-dolacz {
+        display: block;
         font-size: 2.9vh;
         margin-left: 1vw;
         margin-top: 4.5vh;
@@ -132,6 +133,9 @@ import ytIcon from '../../assets/yt_icon.svg';
     }
 /* Footer - mobile styles */
     @media screen and (max-width: 700px) { 
+        #pod-dolacz {
+            display: none;
+        }
         footer {
         }
         .footer {
