Glowna fantastica: nowe daty (basic)

--- a/src/pages/en/index.astro
+++ b/src/pages/en/index.astro
@@ -217,7 +217,9 @@ import Footer from '../../components/en_components/Footer.astro'
 			padding-left: 3.5%;
 		}
 
-
+		#kalendarz-container {
+			background: url(../../assets/tlo-kalendarz.png) lightgray 50% / cover no-repeat;
+		}
 		.wydarzenia {
 			display: flex;
 			justify-content: space-between;
