--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -219,7 +219,10 @@ import Footer from '../components/Footer.astro'
 			line-height: normal;
 			padding-left: 3.5%;
 		}
-
+	
+		#kalendarz-container {
+			background: url(../assets/tlo-kalendarz.png) lightgray 50% / cover no-repeat;
+		}
 
 		.wydarzenia {
 			display: flex;
