Glowna fantastica: nowe daty, naprawa quotu, jeszcze przed responsywnosca

--- a/src/components/en_components/Wydarzenie-przyszle.astro
+++ b/src/components/en_components/Wydarzenie-przyszle.astro
@@ -1,3 +1,4 @@
+<!-- <div class="wydarzenie" onclick="window.location.href='https://example.com';"> -->
 <div class="wydarzenie">
     <div class="data-wydarzenia">
         <p class="data-wydarzenia-dzien">17</p>
@@ -8,6 +9,7 @@
     <a class="miejsce-wydarzenia">Gliwice, PL</a>
     <a class="czas-wydarzenia">18:00</a>
 </div>
+<!-- <div class="wydarzenie" onclick="window.location.href='https://example.com';"> -->
 <div class="wydarzenie">
     <div class="data-wydarzenia">
         <p class="data-wydarzenia-dzien">26</p>
@@ -18,6 +20,7 @@
     <a class="miejsce-wydarzenia">Warsaw, PL</a>
     <a class="czas-wydarzenia">19:00</a>
 </div>
+<!-- <div class="wydarzenie" onclick="window.location.href='https://example.com';"> -->
 <div class="wydarzenie">
     <div class="data-wydarzenia">
         <p class="data-wydarzenia-dzien">29</p>
@@ -28,6 +31,7 @@
     <a class="miejsce-wydarzenia">Warsaw, PL</a>
     <a class="czas-wydarzenia">20:00</a>
 </div>
+<!-- <div class="wydarzenie" onclick="window.location.href='https://example.com';"> -->
 <div class="wydarzenie">
     <div class="data-wydarzenia">
         <p class="data-wydarzenia-dzien">25</p>
@@ -38,6 +42,7 @@
     <a class="miejsce-wydarzenia">Kraków, PL</a>
     <a class="czas-wydarzenia">18:00</a>
 </div>
+<!-- <div class="wydarzenie" onclick="window.location.href='https://example.com';"> -->
 <div class="wydarzenie">
     <div class="data-wydarzenia">
         <p class="data-wydarzenia-dzien">12</p>
@@ -48,12 +53,13 @@
     <a class="miejsce-wydarzenia">Toruń, PL</a>
     <a class="czas-wydarzenia">18:00</a>
 </div>
+<!-- <div class="wydarzenie" onclick="window.location.href='https://example.com';"> -->
 <div class="wydarzenie">
     <div class="data-wydarzenia">
         <p class="data-wydarzenia-dzien">5</p>
         <p class="data-wydarzenia-m-r">Oct<br>2025</p>
     </div>
-    <a style="padding-left: 22px;" class="nazwa-wydarzenia">La Stella</a>
+    <a style="margin-left: 22px;" class="nazwa-wydarzenia">La Stella</a>
     <a class="opis-wydarzenia">Festival of Silent Music</a>
     <a class="miejsce-wydarzenia">Toruń, PL</a>
     <a class="czas-wydarzenia">19:00</a>
@@ -72,7 +78,15 @@
         border-bottom: 1px solid #E4277640;
         padding: 0.3% 1% 0.3% 7px;
         margin-bottom: 11px;
+        /* cursor: pointer; */
+        transition: background 0.3s, color 0.3s;
     }
+
+    /* .wydarzenie:hover {
+        background: rgba(250, 250, 250, 0.7); 
+        backdrop-filter: blur(50px); 
+
+    } */
 
     .data-wydarzenia {
         color: #353535;
