--- a/src/pages/en/index.astro
+++ b/src/pages/en/index.astro
@@ -57,8 +57,8 @@ import Footer from '../../components/en_components/Footer.astro'
 				<img src={secondPhotoMain.src} alt="" />
 				<div>
 					<h2>“Revolutionizing the world of Baroque music with their innovative approach.”</h2>
-					<h4>Katarzyna Czubek,<br>Krzysztof Penderecki Academy of Music, Capella
-						Cracoviensis, Młoda Muzyka Dawna festival</h4>
+					<h4>Autorka<br>Karolina Sajniak-Drzyzga
+						Julian Cochran Foundation </h4>
 					<a>“Captivating,
 						expressive performances demonstrate the musicians' deep passion for the repertoire of the
 						Baroque repertoire. Great contrasts, lyricism and danceability are an integral
@@ -69,6 +69,8 @@ import Footer from '../../components/en_components/Footer.astro'
 						
 						Translated with DeepL.com (free version).”
 					</a>
+					<h4 style="padding-top: 1vw; text-align: left;">Katarzyna Czubek,<br>Krzysztof Penderecki Academy of Music, Capella
+						Cracoviensis, Młoda Muzyka Dawna festival</h4>
 				</div>
 			</div>
 
@@ -245,7 +247,7 @@ import Footer from '../../components/en_components/Footer.astro'
 		#second-quote-main > div {
 			display: flex;
 			flex-direction: column;
-			padding: 1vw 1vw 5vw 4vw;
+			padding: 1vw 1vw 3vw 4vw;
 			background-color: #D9EDFF;
 			background-image: url('../../assets/quote-second-gdnt.svg');
 			background-size: cover;
@@ -258,7 +260,7 @@ import Footer from '../../components/en_components/Footer.astro'
 			color: #032D52;
 			text-align: right;
 			font-family: "Gilda Display";
-			font-size: 5.3vh;
+			font-size: 3.3vw;
 			font-style: normal;
 			font-weight: 400;
 			line-height: normal;
@@ -275,7 +277,7 @@ import Footer from '../../components/en_components/Footer.astro'
 		#second-quote-main > div > a {
 			color: #032D52;
 			font-family: "Gilda Display";
-			font-size: calc(0.6vw + 10px);
+			font-size: 1.5vw;
 			font-style: normal;
 			font-weight: 400;
 			line-height: normal;
