--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -63,15 +63,17 @@ import Footer from '../components/Footer.astro'
 				<img src={secondPhotoMain.src} alt="" />
 				<div>
 					<h2>“Rewolucjonizują świat muzyki barokowej swoim nowatorskim podejściem”</h2>
-					<h4>Katarzyna Czubek,<br>Akademia Muzyczna im. Krzysztofa Pendereckiego, Capella
+					<h4>Autorka<br>Karolina Sajniak-Drzyzga
+						Julian Cochran Foundation </h4>
+						<a>“Porywające,
+							ekspresyjne wykonania ukazują głęboką pasję muzyków do repertuaru
+							barokowego. Wielkie kontrasty, liryzm i taneczność stanowią integralną
+							część ich interpretacji. Zespół nie boi się poszukiwać nowych rozwiązań,
+							odważnie eksplorując alternatywne miejsca koncertowe i pokazując
+							muzykę baroku szerszemu gronu odbiorców. To zespół, którego
+							poczynania warto śledzić!”</a>
+					<h4 style="padding-top: 1vw; text-align: left;">Katarzyna Czubek,<br>Akademia Muzyczna im. Krzysztofa Pendereckiego, Capella
 						Cracoviensis, festiwal Młoda Muzyka Dawna</h4>
-					<a>“Porywające,
-						ekspresyjne wykonania ukazują głęboką pasję muzyków do repertuaru
-						barokowego. Wielkie kontrasty, liryzm i taneczność stanowią integralną
-						część ich interpretacji. Zespół nie boi się poszukiwać nowych rozwiązań,
-						odważnie eksplorując alternatywne miejsca koncertowe i pokazując
-						muzykę baroku szerszemu gronu odbiorców. To zespół, którego
-						poczynania warto śledzić!”</a>
 				</div>
 			</div>
 
@@ -249,7 +251,7 @@ import Footer from '../components/Footer.astro'
 		#second-quote-main > div {
 			display: flex;
 			flex-direction: column;
-			padding: 1vw 1vw 5vw 4vw;
+			padding: 1vw 1vw 3vw 4vw;
 			background-color: #D9EDFF;
 			background-image: url('../assets/quote-second-gdnt.svg');
 			background-size: cover;
@@ -262,7 +264,7 @@ import Footer from '../components/Footer.astro'
 			color: #032D52;
 			text-align: right;
 			font-family: "Gilda Display";
-			font-size: 5.3vh;
+			font-size: 3.3vw;
 			font-style: normal;
 			font-weight: 400;
 			line-height: normal;
@@ -278,8 +280,8 @@ import Footer from '../components/Footer.astro'
 		}
 		#second-quote-main > div > a {
 			color: #032D52;
-			font-family: "Gilda Display";
-			font-size: calc(0.6vw + 10px);
+			font-family: "Gilda Display";	
+			font-size: 1.5vw;
 			font-style: normal;
 			font-weight: 400;
 			line-height: normal;
